# vit-canvas

./: README.md  pyproject.toml  requirements-dev.txt  requirements.txt
app/: app.py
custom_modules/: attention_module.py  transformer_block.py  vision_transformer.py
experiments/: grid_search_mnist.py  param_grid.json
experiments/checkpoints/vit-fast/: microvit_run_3.onnx  microvit_run_3.onnx.data
experiments/checkpoints/vit-large/: microvit_run_34.onnx
modules/: image_encoder.py  transformer_block.py  vision_transformer.py
