[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vit-canvas"
version = "0.1.0"
dynamic = ["dependencies"]
authors = [
  { name="Kamugg" },
]
description = "Custom ViT implementation in a Streamlit app to classify hand drawn digits."
readme = "README.md"
requires-python = ">=3.12"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools.packages.find]
where = ["."]
include = ["custom_modules*"]